--- a/toDoList.html
+++ b/toDoList.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="css/app style.css"/>
-        <title>clock</title>
+        <title>toDoList</title>
 
     </head>
     <body> 
@@ -17,6 +17,7 @@
         placeholder="What is your name?"/>
         <input type = "submit" value = "Log In"/>
         </form>
+
         <h1 id="greeting" class = "hidden"></h1>
         <h2 id="clock">00:00:00</h2>
 <form id="todo-form">
@@ -28,12 +29,16 @@
         <div id = "quote">
             <span></span>
         </div>
+        <div id="weather">
+            <span></span>
+            <span></span>
+        </div>
         <script src="js/making app.js"></script>
-        <script src="js/greetings.js"></script>
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
         <script src="js/background.js"></script>
         <script src="js/todo.js"></script>
+        <script src="js/weather.js"></script>
         
     </body>
 </html>
